# imputer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sim_medical_data.csv
imputer/: imputer.py
notebooks/: simdata.ipynb  test_imputer.ipynb
src/imputer/: __init__.py  imputer.py
tests/: test_imputer.py
